--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -83,16 +83,6 @@
 .developer_section .dev_left .dev_card:hover {
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
 }
-@media screen and (max-width: 991px) {
-  .developer_section .dev_left .dev_card:hover {
-    text-align: center;
-  }
-}
-@media screen and (max-width: 991px) {
-  .developer_section .dev_left .dev_card {
-    text-align: center;
-  }
-}
 .developer_section .dev_left .dev_card .dev_card_logo {
   display: inline-flex;
   align-items: center;
@@ -118,6 +108,11 @@
   color: #3eab90;
   color: #d7ba7d;
 }
+@media screen and (max-width: 991px) {
+  .developer_section .dev_left .dev_card h4 {
+    font-size: 16px;
+  }
+}
 .developer_section .dev_left .dev_card p {
   color: #ffffff;
   font-size: 14px;
@@ -125,6 +120,11 @@
   margin-bottom: 0px;
   transition: all 0.6s ease;
   text-align: left;
+}
+@media screen and (max-width: 991px) {
+  .developer_section .dev_left .dev_card p {
+    font-size: 12px;
+  }
 }
 .developer_section .code-container {
   white-space: pre; /* Preserve code formatting */
