--- a/assets/css/sass/newsletter.scss
+++ b/assets/css/sass/newsletter.scss
@@ -5,16 +5,18 @@
     padding:0px 0px 0;
     @media screen and (max-width:991px) {
         padding-bottom: 30px;
+        text-align: center;
        }
     h3{
         color: $white;
         font-size: 96px;
-        font-weight: 300;
+        font-weight:500;
         line-height: 96px;
         margin-bottom: 0px;
-        @media screen and (max-width:991px) {
-          font-size: 35px;
+        @media screen and (max-width:1400px) {
+          font-size: 44px;
           line-height: 42px;
+          // text-align: center;
          }
     }
     h5{
@@ -22,7 +24,7 @@
       font-weight: 300;
       line-height: 30px;
       color: $primary-color;
-      text-align: left;
+      // text-align: left;
       margin-bottom: 20px;
       padding-top: 15px;
     @media screen and (max-width:991px) {
