--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -3,7 +3,7 @@
     background-color: $black;
     padding: 20px 0px;
     @media screen and (max-width:767px) {
-        padding: 0px;
+        padding: 0px 20px;
         .container {
             padding: 0;
         }
@@ -24,12 +24,12 @@
          background-position: center center;
          animation: bg-spin 8s linear infinite;
         @media screen and (max-width:992px) {
-            padding: 60px 0px;
+            padding: 60px 0px 0px 0px;
             top: 0px;
         }
         @media screen and (max-width:767px) {
-            padding: 30px 0px;
-            border-radius: 0;
+            padding: 30px 0px 0px 0px;
+            border-radius: 20px;
         }
         &:after {
             content: "";
@@ -113,7 +113,7 @@
         }
            
     @media (min-width: 768px) and (max-width: 1300px) {
-        justify-content: center;
+        justify-content: right;
     }
         img{
            position: relative;
