--- a/assets/css/BankZor.css
+++ b/assets/css/BankZor.css
@@ -80,7 +80,6 @@
   align-items: center;
   margin-right: 25px;
   min-width: 43px;
-  animation: ripple 0.7s linear infinite;
 }
 #fz_mobile_section .fz_mobile_text_left .fz_btn {
   display: flex;
@@ -99,135 +98,87 @@
   }
 }
 #fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore {
-  height: 50px;
+  background: #3eab90;
+  color: #ffffff;
   border-radius: 32px;
-  background-color: transparent;
-  outline: none;
-  border: 1px solid #309393;
   font-size: 16px;
-  color: #fff;
-  display: flex;
-  align-items: center;
+  position: relative;
   overflow: hidden;
-  position: relative;
-  transition: all 1s ease;
-  padding: 0px 20px 0 25px;
-  padding: 0px 20px 0 25px;
-  --text-color: rgb(210 210 240);
-  --box-glow-color: transparent;
-  --box-glow-blur: 20px;
-  --color: #00afaf85;
-  position: relative;
-  border: none;
-  box-shadow: 0px 3px 0 0px #31b2b2, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
-  transition: box-shadow 1s ease;
-  z-index: 2;
-  font-size: 16px;
-  border: 1px solid rgba(62, 171, 144, 0.568627451);
-  background: linear-gradient(0deg, rgb(45, 73, 73) 0%, rgb(49, 178, 178) 100%);
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px 20px;
+  border: 1px solid transparent;
+  margin-right: 35px;
+  font-weight: 400;
+  transition: all 0.5s ease-in;
+  width: 180px;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore .text {
-  position: relative;
-  left: 10px;
-  transition: all 1s ease;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore img {
-  opacity: 0;
-  transition: all 1s ease;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore .icon {
-  margin-left: 10px;
+#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore svg {
+  animation: moveAnimation 2s linear infinite;
 }
 #fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore:hover {
-  padding: 0px 20px 0 25px;
-  --text-color: rgb(210 210 240);
-  --box-glow-color: transparent;
-  --box-glow-blur: 32px;
-  --color: #00afaf85;
-  position: relative;
-  border: none;
-  box-shadow: 0px 3px 0 0px #31b2b2, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
-  transition: box-shadow 1s ease;
-  --box-glow-color: var(--color);
-  z-index: 2;
-  font-size: 16px;
-  border: 1px solid rgba(62, 171, 144, 0.568627451);
-  background: linear-gradient(0deg, rgb(45, 73, 73) 0%, rgb(49, 178, 178) 100%);
+  background: transparent;
+  border: 1px solid #3eab90;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore:hover img {
-  opacity: 1;
+#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore .hero-join {
+  line-height: 1.5;
+  display: flex;
+  gap: 20px;
+  position: absolute;
+  bottom: -72%;
+  left: 35px;
+  flex-direction: column;
+  transition: bottom 0.5s;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore:hover .icon {
-  margin-left: 10px;
+#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore:hover .hero-join {
+  bottom: 12px;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore:hover .text {
-  position: relative;
-  left: 0px;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore img {
-  opacity: 1;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore .icon {
-  margin-left: 10px;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore .text {
-  position: relative;
-  left: 0px;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore:hover {
-  --box-glow-color: var(--color);
+@media screen and (max-width: 1300px) {
+  #fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore {
+    padding: 13px 20px;
+    font-size: 14px;
+    margin-right: 24px;
+  }
 }
 #fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn {
-  height: 50px;
+  background: #000000;
+  color: #3eab90;
   border-radius: 32px;
-  background-color: transparent;
-  outline: none;
-  border: 1px solid #309393;
   font-size: 16px;
-  color: #fff;
-  display: flex;
-  align-items: center;
+  position: relative;
   overflow: hidden;
-  position: relative;
-  transition: all 1s ease;
-  padding: 0px 20px 0 25px;
-  margin-left: 20px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px 20px;
+  font-weight: 400;
+  border: 1px solid #3eab90;
+  transition: all 0.3s ease-in;
+  width: 180px;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn .text {
-  position: relative;
-  left: 10px;
-  transition: all 1s ease;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn img {
-  opacity: 0;
-  transition: all 1s ease;
-}
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn .icon {
-  margin-left: 10px;
+#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn svg {
+  animation: moveAnimation 2s linear infinite;
 }
 #fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn:hover {
-  padding: 0px 20px 0 25px;
-  --text-color: rgb(210 210 240);
-  --box-glow-color: transparent;
-  --box-glow-blur: 32px;
-  --color: #00afaf85;
-  position: relative;
-  border: none;
-  box-shadow: 0px 3px 0 0px #31b2b2, 0 0 var(--box-glow-blur) var(--box-glow-color), inset 0 0 26px -10px rgba(29, 77, 45, 0.3607843137);
-  transition: box-shadow 1s ease;
-  --box-glow-color: var(--color);
-  z-index: 2;
-  font-size: 16px;
-  border: 1px solid rgba(62, 171, 144, 0.568627451);
-  background: linear-gradient(0deg, rgb(45, 73, 73) 0%, rgb(49, 178, 178) 100%);
+  background: #3eab90;
+  border: 1px solid transparent;
+  color: #ffffff;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn:hover img {
-  opacity: 1;
+#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn .hero-join {
+  line-height: 1.5;
+  display: flex;
+  gap: 20px;
+  position: absolute;
+  bottom: -72%;
+  left: 35px;
+  flex-direction: column;
+  transition: bottom 0.5s;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn:hover .icon {
-  margin-left: 10px;
+#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn:hover .hero-join {
+  bottom: 12px;
 }
-#fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn:hover .text {
-  position: relative;
-  left: 0px;
+@media screen and (max-width: 1300px) {
+  #fz_mobile_section .fz_mobile_text_left .fz_btn .fz_learmore_btn {
+    padding: 13px 20px;
+    font-size: 14px;
+  }
 }
