--- a/assets/css/features.css
+++ b/assets/css/features.css
@@ -291,8 +291,10 @@
 }
 @media screen and (max-width: 991px) {
   .panel .panel__stack .panel__card h2 {
-    font-size: 30px;
+    font-size: 24px;
     line-height: 36px;
+    text-align: center;
+    margin: 10px;
   }
 }
 .panel .panel__stack .panel__card .nav.nav-pills {
@@ -340,11 +342,6 @@
   background-repeat: no-repeat;
   padding: 0px 50px;
   position: relative;
-  transform: perspective(600px) rotateY(0deg);
-  transition: all ease-in-out 0.6s;
-}
-.panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay:hover {
-  transform: perspective(600px) rotateY(5deg);
 }
 @media screen and (min-width: 0px) and (max-width: 419px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay {
@@ -433,11 +430,13 @@
   font-weight: 200;
   line-height: 22px;
   min-height: 60px;
+  margin-bottom: 1rem;
 }
 @media screen and (max-width: 1400px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text p {
     font-size: 13px;
     line-height: 18px;
+    margin-bottom: 1.5rem;
   }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text a {
@@ -463,7 +462,7 @@
     height: auto;
   }
 }
-@media screen and (min-width: 991px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text .bottom-img {
     top: -15px;
   }
