--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,7 +217,8 @@ header .navbar-expand-lg .navbar-nav li a.nav-link:hover:after {
 @media (min-width: 992px) and (max-width: 1300px) {
   header .navbar-expand-lg .navbar-nav li {
     font-size: 14px;
-    padding: 10px 10px;
+    padding: 10px 4px;
+    line-height: 0px;
   }
 }
 @media screen and (max-width: 991px) {
@@ -1203,6 +1204,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   display: flex;
   justify-content: center;
 }
+@media (min-width: 769px) and (max-width: 991px) {
+  .features_posibilityies .container h3 {
+    font-size: 25px;
+  }
+}
 .features_posibilityies .container h3 p {
   width: 30%;
   text-shadow: 0 0 15px rgba(0, 255, 227, 0.14), 0 0 20px rgba(0, 255, 227, 0.11), 0 0 40px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
@@ -1513,8 +1519,10 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 @media screen and (max-width: 991px) {
   .panel .panel__stack .panel__card h2 {
-    font-size: 30px;
+    font-size: 24px;
     line-height: 36px;
+    text-align: center;
+    margin: 10px;
   }
 }
 .panel .panel__stack .panel__card .nav.nav-pills {
@@ -1655,11 +1663,13 @@ header .fz_sigin ul .unlock a:hover svg path {
   font-weight: 200;
   line-height: 22px;
   min-height: 60px;
+  margin-bottom: 1rem;
 }
 @media screen and (max-width: 1400px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text p {
     font-size: 13px;
     line-height: 18px;
+    margin-bottom: 1.5rem;
   }
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text a {
@@ -1685,7 +1695,7 @@ header .fz_sigin ul .unlock a:hover svg path {
     height: auto;
   }
 }
-@media screen and (min-width: 991px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay .item-pay-text .bottom-img {
     top: -15px;
   }
@@ -1952,16 +1962,6 @@ header .fz_sigin ul .unlock a:hover svg path {
 .developer_section .dev_left .dev_card:hover {
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
 }
-@media screen and (max-width: 991px) {
-  .developer_section .dev_left .dev_card:hover {
-    text-align: center;
-  }
-}
-@media screen and (max-width: 991px) {
-  .developer_section .dev_left .dev_card {
-    text-align: center;
-  }
-}
 .developer_section .dev_left .dev_card .dev_card_logo {
   display: inline-flex;
   align-items: center;
@@ -1987,6 +1987,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   color: #3eab90;
   color: #d7ba7d;
 }
+@media screen and (max-width: 991px) {
+  .developer_section .dev_left .dev_card h4 {
+    font-size: 16px;
+  }
+}
 .developer_section .dev_left .dev_card p {
   color: #ffffff;
   font-size: 14px;
@@ -1994,6 +1999,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   margin-bottom: 0px;
   transition: all 0.6s ease;
   text-align: left;
+}
+@media screen and (max-width: 991px) {
+  .developer_section .dev_left .dev_card p {
+    font-size: 12px;
+  }
 }
 .developer_section .code-container {
   white-space: pre; /* Preserve code formatting */
@@ -2657,11 +2667,18 @@ header .fz_sigin ul .unlock a:hover svg path {
   flex-direction: column;
   justify-content: end;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 767px) {
   .fz-blog .item .card-body {
     width: 100%;
     padding: 0px 25px 30px 24px;
-    bottom: -67px;
+    bottom: -30px;
+    height: 40%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1400px) {
+  .fz-blog .item .card-body {
+    bottom: -20px;
+    height: 50%;
   }
 }
 .fz-blog .item .card-body h5 {
@@ -2672,9 +2689,10 @@ header .fz_sigin ul .unlock a:hover svg path {
   color: #f7c35f;
   margin-bottom: 0px;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1400px) {
   .fz-blog .item .card-body h5 {
     font-size: 16px;
+    padding-bottom: 7px;
     line-height: 22px;
   }
 }
@@ -2687,9 +2705,10 @@ header .fz_sigin ul .unlock a:hover svg path {
   overflow: hidden;
   transition: all 1s ease;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1400px) {
   .fz-blog .item .card-body .card-text {
     font-size: 14px;
+    margin-bottom: 20px;
     line-height: 22px;
   }
 }
@@ -2703,6 +2722,12 @@ header .fz_sigin ul .unlock a:hover svg path {
   gap: 170px;
   position: relative;
   margin-top: 50px;
+}
+@media screen and (max-width: 767px) {
+  .fz-blog .owl-carousel .owl-nav {
+    gap: 70px;
+    margin-top: 10px;
+  }
 }
 .fz-blog .owl-carousel .owl-nav .custom-prev,
 .fz-blog .owl-carousel .owl-nav .custom-next {
@@ -2734,6 +2759,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   background: #3eab90;
   left: 47%;
 }
+@media screen and (max-width: 767px) {
+  .fz-blog .owl-carousel .owl-nav .custom-prev::after {
+    display: none;
+  }
+}
 .fz-blog .owl-carousel .owl-nav .custom-next {
   color: #ffffff;
 }
@@ -2743,6 +2773,11 @@ header .fz_sigin ul .unlock a:hover svg path {
 .fz-blog .owl-carousel .owl-nav .custom-next::before {
   background: #ffffff;
   left: 53%;
+}
+@media screen and (max-width: 767px) {
+  .fz-blog .owl-carousel .owl-nav .custom-next::before {
+    display: none;
+  }
 }
 
 @keyframes moveAnimation {
@@ -3014,18 +3049,19 @@ header .fz_sigin ul .unlock a:hover svg path {
 @media screen and (max-width: 991px) {
   .newsletter_section {
     padding-bottom: 30px;
+    text-align: center;
   }
 }
 .newsletter_section h3 {
   color: #ffffff;
   font-size: 96px;
-  font-weight: 300;
+  font-weight: 500;
   line-height: 96px;
   margin-bottom: 0px;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1400px) {
   .newsletter_section h3 {
-    font-size: 35px;
+    font-size: 44px;
     line-height: 42px;
   }
 }
@@ -3034,7 +3070,6 @@ header .fz_sigin ul .unlock a:hover svg path {
   font-weight: 300;
   line-height: 30px;
   color: #3eab90;
-  text-align: left;
   margin-bottom: 20px;
   padding-top: 15px;
 }
@@ -3108,7 +3143,7 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 @media screen and (max-width: 767px) {
   .play_store_section {
-    padding: 0px;
+    padding: 0px 20px;
   }
   .play_store_section .container {
     padding: 0;
@@ -3132,14 +3167,14 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 @media screen and (max-width: 992px) {
   .play_store_section .play_store_container {
-    padding: 60px 0px;
+    padding: 60px 0px 0px 0px;
     top: 0px;
   }
 }
 @media screen and (max-width: 767px) {
   .play_store_section .play_store_container {
-    padding: 30px 0px;
-    border-radius: 0;
+    padding: 30px 0px 0px 0px;
+    border-radius: 20px;
   }
 }
 .play_store_section .play_store_container:after {
@@ -3229,7 +3264,7 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 @media (min-width: 768px) and (max-width: 1300px) {
   .play_store_section .play_store_right {
-    justify-content: center;
+    justify-content: right;
   }
 }
 .play_store_section .play_store_right img {
