--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -245,8 +245,10 @@
                 line-height: 32px;
                 margin: 20px 35px;
                 @media screen and (max-width: 991px) {
-                  font-size: 30px;
+                  font-size: 24px;
                   line-height: 36px;
+                  text-align: center;
+                  margin: 10px;
                 }
             }
             .nav.nav-pills {
@@ -353,7 +355,7 @@
                                  line-height: 18px;
                                 }
                          @media screen and (min-width: 1200px) and (max-width: 1400px) {
-                            font-size: 16px;
+                          font-size: 16px;
                           line-height: 18px;
                            }
                             }
@@ -363,10 +365,11 @@
                                 font-weight: 200;
                                 line-height: 22px;
                                 min-height: 60px;
-                               
+                                margin-bottom: 1rem;
                                 @media screen and (max-width: 1400px) {
                                   font-size: 13px;
                                   line-height: 18px;
+                                  margin-bottom: 1.5rem;
                                  }
                             }
                             a {
@@ -389,7 +392,7 @@
                                   height:auto;
                                 }
                               }
-                               @media screen and (min-width: 991px) and (max-width: 1199px) {
+                               @media screen and (max-width: 1199px) {
                                
                                  top:-15px;
                             }
