--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -158,7 +158,9 @@ header {
         }
         @media (min-width: 992px) and (max-width: 1300px) {
           font-size: 14px;
-          padding: 10px 10px;
+          // padding: 10px 10px;
+        padding: 10px 4px;
+        line-height: 0px;
         }
         @media screen and (max-width: 991px) {
           padding: 10px 5px;
