--- a/assets/css/sass/variable.scss
+++ b/assets/css/sass/variable.scss
@@ -86,7 +86,7 @@ $ternary-color: #2d4949;
       left: 0px;
     }
     &:hover{
-      --box-glow-color: var(--color);
+      --box-glow-color: #06eed5;
     }
 }
 
