--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -154,9 +154,14 @@ header .navbar-expand-lg .navbar-nav li a.nav-link:hover {
 header .navbar-expand-lg .navbar-nav li a.nav-link:hover:after {
   transform: scaleX(1);
 }
-@media (min-width: 992px) and (max-width: 1300px) {
+@media (min-width: 992px) and (max-width: 1051px) {
   header .navbar-expand-lg .navbar-nav li {
-    font-size: 14px;
+    font-size: 12px;
+    padding: 0;
+  }
+}
+@media (min-width: 1052px) and (max-width: 1300px) {
+  header .navbar-expand-lg .navbar-nav li {
     padding: 10px 4px;
     line-height: 0px;
   }
@@ -202,9 +207,9 @@ header .fz_sigin ul li a span svg {
 header .fz_sigin ul li a span svg path {
   fill: #fff;
 }
-@media (min-width: 992px) and (max-width: 1300px) {
+@media (min-width: 992px) and (max-width: 1051px) {
   header .fz_sigin ul li a {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 header .fz_sigin ul li:nth-child(2) {
@@ -238,7 +243,7 @@ header .fz_sigin ul .unlock a:hover svg path {
   fill: #f7c35f;
 }
 @media screen and (max-width: 991px) {
-  header .fz_sigin ul img {
+  header .fz_sigin ul .flag-img {
     display: none;
   }
 }
@@ -316,6 +321,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   --h: 40px;
   --icon-size: 25px;
   padding: 0px 15px !important;
+}
+@media (min-width: 992px) and (max-width: 1051px) {
+  .onboard_btn .buttons {
+    font-size: 12px;
+  }
 }
 .onboard_btn .buttons::before {
   content: "";
