--- a/assets/css/BankZor.css
+++ b/assets/css/BankZor.css
@@ -13,23 +13,9 @@
 }
 #fz_mobile_section .fz_mobile_right {
   display: flex;
-  border-bottom-right-radius: 40px;
 }
 #fz_mobile_section .fz_mobile_right img {
-  position: relative;
-  z-index: 2;
-}
-#fz_mobile_section .fz_mobile_right img:first-child {
-  z-index: 9;
-}
-#fz_mobile_section .fz_mobile_right img:last-child {
-  right: 152px;
-}
-@media screen and (max-width: 991px) {
-  #fz_mobile_section .fz_mobile_right img {
-    height: 460px;
-    margin: 15px;
-  }
+  width: 100%;
 }
 #fz_mobile_section .fz_mobile_text_left h2 {
   color: #ffffff;
