--- a/assets/css/sass/banner.scss
+++ b/assets/css/sass/banner.scss
@@ -12,6 +12,15 @@
     height: auto;
   }
 
+  iframe{
+    height: 120vh !important;
+    transform: scale(0.8);
+    @media screen and (max-width: 991px) {
+      height: 117vh !important; 
+      transform: scale(0.5);
+    }
+  }
+
   &::before {
     content: '';
     position: absolute;
@@ -64,13 +73,21 @@
     h1 {
      font-size: 65px;
       font-weight: 700;
-      line-height: 0px;
       margin-bottom: 40px;
-          line-height: 70px;
+      line-height: 70px;
+      @media screen and (max-width: 1300px) {
+        font-size: 38px;
+        line-height: 40px;
+      }
       @media screen and (max-width: 991px) {
         font-size: 40px;
         justify-content: center;
         line-height: 50px;
+      }
+      @media screen and (max-width: 768px) {
+          line-height: 40px;
+          font-size: 1.75rem;
+          text-align: center;
       }
 
       // @media (min-width: 1024px) and (max-width: 1400px) {
@@ -86,10 +103,6 @@
           to {
             stroke-dashoffset: 0;
           }
-        }
-        @media screen and (max-width: 1300px) {
-          font-size: 38px;
-          line-height: 40px;
         }
         svg{
           @media screen and (max-width: 1300px) {
@@ -202,20 +215,46 @@
 }
 
 
-.preload svg {max-width:200px;height:auto;margin:0 auto;display:block;}
-.preload svg #p1 {stroke-dasharray:109px;stroke-dashoffset:109px;}
-.preload svg #p2 {stroke-width:1;stroke-dasharray:311px;stroke-dashoffset:311px;}
-.preload svg #p3 {stroke-dasharray:359px;stroke-dashoffset:359px;}
-.preload svg #p1, section.preload svg #p2, section.preload svg #p3 {fill:transparent;stroke:#000;stroke-width:1;-webkit-animation-name:draw;-moz-animation-name:draw;-o-animation-name:draw;animation-name:draw;-webkit-animation-duration:2s;-moz-animation-duration:2s;-o-animation-duration:2s;animation-duration:2s;-webkit-animation-fill-mode:forwards;-moz-animation-fill-mode:forwards;-o-animation-fill-mode:forwards;animation-fill-mode:forwards;-webkit-animation-iteration-count:1;-moz-animation-iteration-count:1;-o-animation-iteration-count:1;animation-iteration-count:1;-webkit-animation-timing-function:linear;-moz-animation-timing-function:linear;-o-animation-timing-function:linear;animation-timing-function:linear;}
-@-webkit-keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
-100% {fill:#000;stroke:transparent;}
+// .preload svg {max-width:200px;height:auto;margin:0 auto;display:block;}
+// .preload svg #p1 {stroke-dasharray:109px;stroke-dashoffset:109px;}
+// .preload svg #p2 {stroke-width:1;stroke-dasharray:311px;stroke-dashoffset:311px;}
+// .preload svg #p3 {stroke-dasharray:359px;stroke-dashoffset:359px;}
+// .preload svg #p1, section.preload svg #p2, section.preload svg #p3 {fill:transparent;stroke:#000;stroke-width:1;-webkit-animation-name:draw;-moz-animation-name:draw;-o-animation-name:draw;animation-name:draw;-webkit-animation-duration:2s;-moz-animation-duration:2s;-o-animation-duration:2s;animation-duration:2s;-webkit-animation-fill-mode:forwards;-moz-animation-fill-mode:forwards;-o-animation-fill-mode:forwards;animation-fill-mode:forwards;-webkit-animation-iteration-count:1;-moz-animation-iteration-count:1;-o-animation-iteration-count:1;animation-iteration-count:1;-webkit-animation-timing-function:linear;-moz-animation-timing-function:linear;-o-animation-timing-function:linear;animation-timing-function:linear;}
+// @-webkit-keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
+// 100% {fill:#000;stroke:transparent;}
+// }
+// @-moz-keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
+// 100% {fill:#000;stroke:transparent;}
+// }
+// @-o-keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
+// 100% {fill:#000;stroke:transparent;}
+// }
+// @keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
+// 100% {fill:#000;stroke:transparent;}
+// }
+.text-line1 {
+  width: auto;
+  height: 55px;
+}       
+/* Animation Setup */
+.text-line1 .path {
+  stroke-dasharray: 1000; /* Large number to ensure path length is enough */
+  stroke-dashoffset: 1000;
+  animation: draws 8s ease forwards;
+  animation-iteration-count: infinite;
 }
-@-moz-keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
-100% {fill:#000;stroke:transparent;}
+
+/* Staggered Animation */
+.text-line1 .path {
+  animation-delay: 1s;
+  fill: none;
+    stroke: #f7c35f;
+    stroke-width: 0.5;
 }
-@-o-keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
-100% {fill:#000;stroke:transparent;}
-}
-@keyframes draw {95% {stroke-dashoffset:0;fill:transparent;stroke:#000;}
-100% {fill:#000;stroke:transparent;}
+
+/* Keyframes for Animation */
+@keyframes draws {
+  to {
+    stroke-dashoffset: 0; /* Animate to reveal the path */
+  }
 }
