--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -466,3 +466,17 @@ header {
 // .buttons:focus-visible:not(:hover, :active) {
 // 	--box-glow-color: rgb(114 114 114 / 0.5);
 // }
+#lottie-animation {
+  width: 100%;
+  height: 100%;
+  margin: auto; /* Center it horizontally */
+}
+.visual-desktop {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+#lottie-animation1 svg {
+  width: 35px!important;
+  height: 35px!important;
+}
