--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -187,3 +187,10 @@
     }
   }
 }
+div.product-icon {
+  width: 70px;
+  height: 70px;
+  display: inline-flex;
+  align-items: center;
+  margin-left: -20px;
+}
