--- a/assets/css/sass/product_intro.scss
+++ b/assets/css/sass/product_intro.scss
@@ -162,3 +162,43 @@
         }
     }
 }
+.features_posibilityies {
+    .hash_content {
+        width: 36px;
+        height: 40px;
+        position: absolute;
+        left: 380px;
+
+        @media screen and (min-width: 1400px) {
+            left: 472px;
+        }
+        @media screen and (max-width: 1200px) {
+              left: 295px;
+        }
+        @media (min-width: 769px) and (max-width: 991px) {
+              left: 247px;
+          }
+        @media screen and (max-width: 768px) {
+            left: 0px;
+        }
+    }
+}
+.hash_content {
+  position: relative;
+  z-index: 1;
+  width: 62px;
+  height: 90px;
+  @media screen and (max-width: 1200px) {
+      width: 30px;
+      height: 60px;
+  }
+}
+.features_posibilityies {
+    .hash_bar {
+        font-size: 45px !important;
+        @media (min-width: 769px) and (max-width: 991px) {
+                font-size: 30px !important;
+        }
+    }
+}
+
