--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -204,3 +204,36 @@
 #scroll_top svg {
   width: 20px;
 }
+
+#page-loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background: url("/assets/images/finzor-loading.gif") center no-repeat #000;
+}
+@media screen and (max-width: 767px) {
+  #page-loader {
+    background-size: contain;
+  }
+}
+
+.footer-bg img {
+  width: 100%;
+}
+
+.chat-bot {
+  position: fixed;
+  right: -5px;
+  bottom: 5px;
+  cursor: pointer;
+  display: inline-flex;
+  width: 120px;
+  z-index: 99;
+}
+.chat-bot img {
+  width: 100%;
+  height: 100%;
+}
