--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -437,6 +437,23 @@ header .fz_sigin ul .unlock a:hover svg path {
   left: 10px !important;
 }
 
+#lottie-animation {
+  width: 100%;
+  height: 100%;
+  margin: auto; /* Center it horizontally */
+}
+
+.visual-desktop {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+#lottie-animation1 svg {
+  width: 35px !important;
+  height: 35px !important;
+}
+
 @keyframes moveAnimation {
   0% {
     transform: translateX(0);
@@ -461,6 +478,16 @@ header .fz_sigin ul .unlock a:hover svg path {
     padding: 130px 10px 40px 10px;
     text-align: center;
     height: auto;
+  }
+}
+#fz-hero-bg iframe {
+  height: 120vh !important;
+  transform: scale(0.8);
+}
+@media screen and (max-width: 991px) {
+  #fz-hero-bg iframe {
+    height: 117vh !important;
+    transform: scale(0.5);
   }
 }
 #fz-hero-bg::before {
@@ -513,15 +540,27 @@ header .fz_sigin ul .unlock a:hover svg path {
 #fz-hero-bg .text-content h1 {
   font-size: 65px;
   font-weight: 700;
-  line-height: 0px;
   margin-bottom: 40px;
   line-height: 70px;
+}
+@media screen and (max-width: 1300px) {
+  #fz-hero-bg .text-content h1 {
+    font-size: 38px;
+    line-height: 40px;
+  }
 }
 @media screen and (max-width: 991px) {
   #fz-hero-bg .text-content h1 {
     font-size: 40px;
     justify-content: center;
     line-height: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  #fz-hero-bg .text-content h1 {
+    line-height: 40px;
+    font-size: 1.75rem;
+    text-align: center;
   }
 }
 #fz-hero-bg .text-content h1 .text-line text {
@@ -532,12 +571,6 @@ header .fz_sigin ul .unlock a:hover svg path {
 @keyframes dash {
   to {
     stroke-dashoffset: 0;
-  }
-}
-@media screen and (max-width: 1300px) {
-  #fz-hero-bg .text-content h1 {
-    font-size: 38px;
-    line-height: 40px;
   }
 }
 @media screen and (max-width: 1300px) {
@@ -664,97 +697,31 @@ header .fz_sigin ul .unlock a:hover svg path {
   position: relative;
 }
 
-.preload svg {
-  max-width: 200px;
-  height: auto;
-  margin: 0 auto;
-  display: block;
+.text-line1 {
+  width: auto;
+  height: 55px;
 }
 
-.preload svg #p1 {
-  stroke-dasharray: 109px;
-  stroke-dashoffset: 109px;
+/* Animation Setup */
+.text-line1 .path {
+  stroke-dasharray: 1000; /* Large number to ensure path length is enough */
+  stroke-dashoffset: 1000;
+  animation: draws 8s ease forwards;
+  animation-iteration-count: infinite;
 }
 
-.preload svg #p2 {
-  stroke-width: 1;
-  stroke-dasharray: 311px;
-  stroke-dashoffset: 311px;
+/* Staggered Animation */
+.text-line1 .path {
+  animation-delay: 1s;
+  fill: none;
+  stroke: #f7c35f;
+  stroke-width: 0.5;
 }
 
-.preload svg #p3 {
-  stroke-dasharray: 359px;
-  stroke-dashoffset: 359px;
-}
-
-.preload svg #p1, section.preload svg #p2, section.preload svg #p3 {
-  fill: transparent;
-  stroke: #000;
-  stroke-width: 1;
-  -webkit-animation-name: draw;
-  -moz-animation-name: draw;
-  -o-animation-name: draw;
-  animation-name: draw;
-  -webkit-animation-duration: 2s;
-  -moz-animation-duration: 2s;
-  -o-animation-duration: 2s;
-  animation-duration: 2s;
-  -webkit-animation-fill-mode: forwards;
-  -moz-animation-fill-mode: forwards;
-  -o-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-iteration-count: 1;
-  -moz-animation-iteration-count: 1;
-  -o-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-  -o-animation-timing-function: linear;
-  animation-timing-function: linear;
-}
-
-@-webkit-keyframes draw {
-  95% {
-    stroke-dashoffset: 0;
-    fill: transparent;
-    stroke: #000;
-  }
-  100% {
-    fill: #000;
-    stroke: transparent;
-  }
-}
-@-moz-keyframes draw {
-  95% {
-    stroke-dashoffset: 0;
-    fill: transparent;
-    stroke: #000;
-  }
-  100% {
-    fill: #000;
-    stroke: transparent;
-  }
-}
-@-o-keyframes draw {
-  95% {
-    stroke-dashoffset: 0;
-    fill: transparent;
-    stroke: #000;
-  }
-  100% {
-    fill: #000;
-    stroke: transparent;
-  }
-}
-@keyframes draw {
-  95% {
-    stroke-dashoffset: 0;
-    fill: transparent;
-    stroke: #000;
-  }
-  100% {
-    fill: #000;
-    stroke: transparent;
+/* Keyframes for Animation */
+@keyframes draws {
+  to {
+    stroke-dashoffset: 0; /* Animate to reveal the path */
   }
 }
 @keyframes moveAnimation {
@@ -1275,6 +1242,55 @@ header .fz_sigin ul .unlock a:hover svg path {
   .features_posibilityies .container h3 {
     font-size: 40px;
     padding: 10px; /* Add spacing for smaller viewports */
+  }
+}
+
+.features_posibilityies .hash_content {
+  width: 36px;
+  height: 40px;
+  position: absolute;
+  left: 380px;
+}
+@media screen and (min-width: 1400px) {
+  .features_posibilityies .hash_content {
+    left: 472px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .features_posibilityies .hash_content {
+    left: 295px;
+  }
+}
+@media (min-width: 769px) and (max-width: 991px) {
+  .features_posibilityies .hash_content {
+    left: 247px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .features_posibilityies .hash_content {
+    left: 0px;
+  }
+}
+
+.hash_content {
+  position: relative;
+  z-index: 1;
+  width: 62px;
+  height: 90px;
+}
+@media screen and (max-width: 1200px) {
+  .hash_content {
+    width: 30px;
+    height: 60px;
+  }
+}
+
+.features_posibilityies .hash_bar {
+  font-size: 45px !important;
+}
+@media (min-width: 769px) and (max-width: 991px) {
+  .features_posibilityies .hash_bar {
+    font-size: 30px !important;
   }
 }
 
@@ -1928,6 +1944,14 @@ header .fz_sigin ul .unlock a:hover svg path {
   height: 100%;
 }
 
+div.product-icon {
+  width: 70px;
+  height: 70px;
+  display: inline-flex;
+  align-items: center;
+  margin-left: -20px;
+}
+
 @keyframes moveAnimation {
   0% {
     transform: translateX(0);
@@ -2168,6 +2192,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   inherits: true;
   initial-value: 0turn;
 }
+div#api-dev {
+  width: 100%;
+  height: 300px;
+}
+
 @keyframes moveAnimation {
   0% {
     transform: translateX(0);
@@ -3035,6 +3064,21 @@ header .fz_sigin ul .unlock a:hover svg path {
   }
 }
 
+div#faq-animate {
+  width: 100%;
+  height: 400px;
+  display: inline-flex;
+  justify-content: start;
+}
+div#faq-animate svg {
+  width: auto !important;
+}
+@media screen and (max-width: 991px) {
+  div#faq-animate {
+    display: block;
+  }
+}
+
 @keyframes moveAnimation {
   0% {
     transform: translateX(0);
@@ -3774,4 +3818,37 @@ header .fz_sigin ul .unlock a:hover svg path {
 }
 #scroll_top svg {
   width: 20px;
+}
+
+#page-loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background: url("/assets/images/finzor-loading.gif") center no-repeat #000;
+}
+@media screen and (max-width: 767px) {
+  #page-loader {
+    background-size: contain;
+  }
+}
+
+.footer-bg img {
+  width: 100%;
+}
+
+.chat-bot {
+  position: fixed;
+  right: -5px;
+  bottom: 5px;
+  cursor: pointer;
+  display: inline-flex;
+  width: 120px;
+  z-index: 99;
+}
+.chat-bot img {
+  width: 100%;
+  height: 100%;
 }
