--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -172,3 +172,11 @@
   width: 100%;
   height: 100%;
 }
+
+div.product-icon {
+  width: 70px;
+  height: 70px;
+  display: inline-flex;
+  align-items: center;
+  margin-left: -20px;
+}
