--- a/assets/css/product_intro.css
+++ b/assets/css/product_intro.css
@@ -176,3 +176,52 @@
     padding: 10px; /* Add spacing for smaller viewports */
   }
 }
+
+.features_posibilityies .hash_content {
+  width: 36px;
+  height: 40px;
+  position: absolute;
+  left: 380px;
+}
+@media screen and (min-width: 1400px) {
+  .features_posibilityies .hash_content {
+    left: 472px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .features_posibilityies .hash_content {
+    left: 295px;
+  }
+}
+@media (min-width: 769px) and (max-width: 991px) {
+  .features_posibilityies .hash_content {
+    left: 247px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .features_posibilityies .hash_content {
+    left: 0px;
+  }
+}
+
+.hash_content {
+  position: relative;
+  z-index: 1;
+  width: 62px;
+  height: 90px;
+}
+@media screen and (max-width: 1200px) {
+  .hash_content {
+    width: 30px;
+    height: 60px;
+  }
+}
+
+.features_posibilityies .hash_bar {
+  font-size: 45px !important;
+}
+@media (min-width: 769px) and (max-width: 991px) {
+  .features_posibilityies .hash_bar {
+    font-size: 30px !important;
+  }
+}
