--- a/assets/css/sass/faq.scss
+++ b/assets/css/sass/faq.scss
@@ -120,3 +120,16 @@
       }
     }
 }
+div#faq-animate {
+  width: 100%;
+  height: 400px;
+  display: inline-flex;
+  justify-content: start;
+  svg {
+    width: auto!important;
+  
+  }
+  @media screen and (max-width: 991px) {
+    display: block;
+  }
+}
