--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -205,3 +205,31 @@
         width: 20px;
     }
 }
+#page-loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    background: url('/assets/images/finzor-loading.gif') center no-repeat #000;
+    @media screen and (max-width: 767px) {
+        background-size: contain;
+    }
+}
+.footer-bg img {
+    width: 100%;
+}
+.chat-bot{
+    position: fixed;
+    right: -5px;
+    bottom: 5px;
+    cursor: pointer;
+    display: inline-flex;
+    width: 120px;
+    z-index: 99;
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
